2004-12-17  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : mark out param on Window.GetFrameExtents.
	* gdk/WindowAttr.custom : new typed Mask prop.
	* gtk/Widget.custom : new typed WidgetFlags prop. mark Flags obsolete.

2004-12-17  Mike Kestner  <mkestner@novell.com>

	* gtk/Makefile.am : add new file.
	* gtk/glue/makefile.win32 : add missing file.
	* gtk/NodeCellDataFunc.cs : new callback delegate type and marshaler
	for NodeStore tree views using GtkTreeCellDataFuncs.
	* gtk/NodeStore.cs : add internal GetNode overload by TreeIter.
	* gtk/NodeView.cs : add AppendColumn overload that uses data funcs.
	* gtk/TreeViewColumn.custom : manual implementation for SetCellDataFunc
	to support both TreeIter and ITreeNode models.  We need to hold a ref
	to a delegate for each cell renderer on a column. [Fixes #63062]
	* sample/NodeViewDemo.cs : use a NodeCellDataFunc for one of the 
	cell renderers in the tree.

2004-12-17  Dan Winship  <danw@novell.com>

	* generator/Field.cs (StudlyName): Fall back to using "cname" if
	"name" isn't defined (ie, when using the latest generator against
	api files output by an older parser).

2004-12-17  Dan Winship  <danw@novell.com>

	* generator/ClassBase.cs (IgnoreMethod): Don't ignore GetFoo and
	SetFoo methods if they aren't in the right form to be turned into
	property accessors. (Causes 13 previously ignored methods to now
	be wrapped. See doc/ChangeLog.)

	* gtk/Gtk.metadata: Fix up a few of those newly-exposed methods

2004-12-16  Dan Winship  <danw@novell.com>

	* generator/ManagedCallString.cs (Setup, Finish, ToString): Add
	new methods to allow arbitrary setup and teardown code around the
	managed call. When passing a type with "complicated" marshalling
	requirements as a ref or out param, first assign the value to a
	temporary variable (in Setup), then pass the temp as the ref or
	out param (in ToString), and then assign the new value back to the
	original argument (in Finish).

	* generator/Signal.cs: 