@@ -31,7 +31,7 @@ The differences between Gtk.Object and GLib.<see cref="T:GLib.Object" /> is a hi
   <Attributes />
   <Members>
     <Member MemberName="Destroy">
-      <MemberSignature Language="C#" Value="public void Destroy ();" />
+      <MemberSignature Language="C#" Value="public virtual void Destroy ();" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
