@@ -1008,14 +1008,14 @@
       </Docs>
     </Member>
     <Member MemberName="Destroy">
-      <MemberSignature Language="C#" Value="public void Destroy ();" />
+      <MemberSignature Language="C#" Value="public override void Destroy ();" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>Destroys a <paramref name="widget" />.</summary>
+        <summary>Destroys a widget.</summary>
         <remarks>
           <para>
           Equivalent to <see cref="M:Gtk.Object.Destroy" />, except that you don't have to cast the <paramref name="widget" /> to <see cref="T:Gtk.Object" />. When a <paramref name="widget" /> is destroyed, it will break any references it holds to other objects. If the <paramref name="widget" /> is inside a container, the <paramref name="widget" /> will be removed from the container. If the <paramref name="widget" /> is a toplevel (derived from <see cref="T:Gtk.Window" />), it will be removed from the list of toplevels, and the reference GTK+ holds to it will be removed. 
@@ -3725,7 +3725,7 @@ xs    <Member MemberName="OnMapEvent">
         <returns>a <see cref="T:System.Int32" /></returns>
         <remarks>
           <para>
-          This property should only be used when writing custom widgets in C#. The <see cref="M:Gtk.Widget.WidgetFlags"/> property is a preferred more strongly typed member.  This member is obsolete in Gtk# 2.0.
+          This property should only be used when writing custom widgets in C#. The <see cref="M:Gtk.Widget.WidgetFlags" /> property is a preferred more strongly typed member.  This member is obsolete in Gtk# 2.0.
           </para>
           <para>
           See <see cref="T:Gtk.WidgetFlags" /> for possible values.
