@@ -1730,5 +1730,17 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
+    <Member MemberName="Destroy">
+      <MemberSignature Language="C#" Value="public override void Destroy ();" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Destroys a Window.</summary>
+        <remarks>All toplevel windows must be explicitly destroyed.</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
